--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concat": "^1.0.3",
     "eslint": "4.16.0",
     "eslint-config-htmlacademy": "0.4.x",
+    "gh-pages": "^3.1.0",
     "gulp": "4.0.x",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
@@ -37,7 +38,8 @@
     "start": "gulp start",
     "webp": "gulp webp",
     "sprite": "gulp sprite",
-    "images": "gulp images"
+    "images": "gulp images",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "last 2 versions",
